Output correct values for 'align' attribute for img, iframe, object, applet, and input elements: b=112276, r=brade, sr=jst, a=blizzard/drivers