content/html/content/src/nsHTMLIFrameElement.cpp
@@ -313,7 +313,7 @@ nsHTMLIFrameElement::AttributeToString(nsIAtom* aAttribute,
   }
   else if (aAttribute == nsHTMLAtoms::align) {
     if (eHTMLUnit_Enumerated == aValue.GetUnit()) {
-      AlignValueToString(aValue, aResult);
+      VAlignValueToString(aValue, aResult);
       return NS_CONTENT_ATTR_HAS_VALUE;
     }
   }
