content/html/content/src/nsHTMLImageElement.cpp
@@ -583,7 +583,7 @@ nsHTMLImageElement::AttributeToString(nsIAtom* aAttribute,
 {
   if (aAttribute == nsHTMLAtoms::align) {
     if (eHTMLUnit_Enumerated == aValue.GetUnit()) {
-      AlignValueToString(aValue, aResult);
+      VAlignValueToString(aValue, aResult);
       return NS_CONTENT_ATTR_HAS_VALUE;
     }
   }
